--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,35 @@
-/*  */
+*,
+*::after
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+::-webkit-scrollbar {
+    display: none;
+}
+
+/* display -> grid */
+body {
+    display: grid;
+}
+
+/* number of rows */
+body {
+    grid-template-rows: auto minmax(100%, 100dvh) auto;
+}
+
+/* navbar */
+.navbar{
+
+    & img[alt='logo'] {
+        width: 5rem;
+    }
+}
+
+/* All the images */
+img {
+    aspect-ratio: 1;
+    object-fit: cover;
+    object-position: center;
+}
