--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,8 @@ img {
     object-fit: cover;
     object-position: center;
 }
+
+/*text-align: center */
+:is(h2, footer p) {
+    text-align: center;
+}
