--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: cursive;
 }
 ::-webkit-scrollbar {
     display: none;
@@ -38,3 +39,44 @@ img {
 :is(h2, footer p) {
     text-align: center;
 }
+
+.card {
+    width: 18rem;
+
+    & img {
+        object-fit: contain;
+        padding-block: .2rem;
+    }
+
+    & .card-body {
+        display: grid;
+        grid-template-rows: subgrid;
+        grid-row: span 4;
+    }
+}
+
+/* ABOUT PAGE */
+.container3 {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 20px;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 200px;
+    width: 250px auto;
+}
+#box1 {
+    margin-top: 25px;
+    width: 500px;
+    background-color: #a3b18a;
+    color: #fff;
+    box-shadow: 0 0 20px 0 #3a5a40;
+    border-radius: 15px;
+    padding: 10px;
+    text-decoration: none;
+    height: 450px auto;
+}
+.p2 {
+    font-family: cursive;
+}
+/* end of about page */
