--- a/css/style.css
+++ b/css/style.css
@@ -41,19 +41,24 @@ img {
 }
 
 .card {
-    width: 18rem;
-
-    & img {
-        object-fit: contain;
-        padding-block: .2rem;
-    }
-
-    & .card-body {
-        display: grid;
-        grid-template-rows: subgrid;
-        grid-row: span 4;
-    }
-}
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid #5e6469;
+    border-radius: 10px; 
+    overflow: hidden;
+  }
+  
+  .card-body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  
+  .card-title, .card-text {
+    margin-bottom: 0.5rem;
+  }
 
 /* ABOUT PAGE */
 .container3 {
