--- a/css/style.css
+++ b/css/style.css
@@ -85,3 +85,17 @@ img {
     font-family: cursive;
 }
 /* end of about page */
+
+/* Checkout page */
+.purchaseButton{
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    background-color: #3a5a40;
+    border: none;
+    padding: 5px;
+    border-radius: 15px;
+}
+/* end of checkout page */
