--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ img {
 }
 #box1 {
     margin-top: 25px;
-    width: 500px;
+    width: 300px;
     background-color: #a3b18a;
     color: #fff;
     box-shadow: 0 0 20px 0 #3a5a40;
@@ -81,8 +81,12 @@ img {
     text-decoration: none;
     height: 450px auto;
 }
+#head3 {
+    text-align: center;
+    padding-top: 50px;
+}
 .p2 {
-    font-family: cursive;
+    font-family:  'Lora', serif;
 }
 /* end of about page */
 
