--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@
 }
 /* navbar */
 .navbar {
-    background-color: blueviolet;
+    background-color: #ffdbe9;
     & img[alt='logo'] {
         width: 5rem;
     }
@@ -119,6 +119,17 @@ img {
 /* end of about page */
 
 /* Checkout page */
+.container-fluid6 {
+    min-height: 89.8vh;
+    place-items: center;
+    background-image: url(https://asheekasamuels.github.io/All-Images/images/IMG_3200.jpg);
+    background-size: cover;
+    background-position: center;
+    border-image: fill 0 linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
+    font-family: cursive;
+    color: white;
+
+}
 .purchaseButton{
     text-align: center;
     display: flex;
