--- a/css/style.css
+++ b/css/style.css
@@ -134,22 +134,20 @@ img {
 }
 .purchaseButton{
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     color: white;
-    background-color: #AF8F6F;
+    background-color: pink;
     border: none;
     padding: 5px;
     border-radius: 15px;
 }
 .clearButton{
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     color: white;
-    background-color: #AF8F6F;
+    background-color: pink;
     border: none;
     padding: 5px;
     border-radius: 15px;
@@ -163,6 +161,9 @@ img {
     background-position: center;
     border-image: fill 0 linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
     color: white;
+    display: grid;
+    place-items: center;
+    min-height: 89.8vh;
 }
 .btn{
     background-color: lightblue;
