--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,9 @@ img {
     color: white;
     width: auto;
     left: auto;
+    display: grid;
+    place-items: center;
+    min-height: 89.8vh;
 }
 
 .contact .heading-text {
