--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,11 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Emilys Candy";
-    font-size: medium;
     text-align: center;
 }
 ::-webkit-scrollbar {
     display: none;
 }
-
 /* display -> grid */
 :is(body, .card) {
     display: grid;
@@ -82,16 +80,8 @@ img {
 .card{
     background: transparent;
     text-align: center;
-    margin: auto;
-
 }
 
-@media (min-width: 767px) {
-    .body {
-        max-width: 480px;
-        margin: 0 auto;
-    }
-}
 /* end of home page */
 
 /* ABOUT PAGE */
@@ -110,8 +100,8 @@ img {
     margin: 20px;
     justify-content: space-evenly;
     align-items: center;
+    height: 200px;
     width: 250px auto;
-    
 }
 #box1 {
     margin-top: 25px;
@@ -131,21 +121,7 @@ img {
 .p2 {
     font-family:  'Lora', serif;
 }
-@media only screen and (max-width:767px) {
-    .container3{
-        flex-direction: column;
-        width:100%;
-        margin:10px;
-    }
-    #box1 {
-        width: 100%;
-        margin: 10px;
-        height: auto;
-    }
-    #head3 {
-        padding-top: 20px;
-    }
-}
+
 /* end of about page */
 
 /* Checkout page */
@@ -179,14 +155,44 @@ img {
     padding: 5px;
     border-radius: 15px;
 }
-@media only screen and (max-width:767px) {
-    .purchaseButton{
-        font-size: 12px;
+@media (width < 999px) {
+    .checkoutTable table, thead, tbody, th, td, tr {
+        display: block;
     }
-    .clearButton{
-        font-size: 12px;
-        }
+    .checkoutTr{
+        display: none;
     }
+    .checkoutTable table {
+        margin-bottom: 5rem;
+    }
+    .checkoutTable thead tr {
+        display: none;
+    }
+    .checkoutTable tr {
+        margin-bottom: 15px;
+    }
+    .checkoutTable td {
+        position: relative;
+        padding-left: 50%;
+    }
+    .checkoutTable td:before {
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        width: 45%;
+        padding-right: 10px;
+        white-space: nowrap;
+        transform: translateY(-50%);
+    }
+    .checkoutTable td:nth-of-type(1):before { content: "Product Name"; }
+    .checkoutTable td:nth-of-type(2):before { content: "Image"; }
+    .checkoutTable td:nth-of-type(3):before { content: "Category"; }
+    .checkoutTable td:nth-of-type(4):before { content: "Quantity"; }
+    .checkoutTable td:nth-of-type(5):before { content: "Amount"; }
+    .checkoutTable td:nth-of-type(6):before { content: "Total"; }
+    .checkoutTable .total-row td:before { content: ""; }
+    .checkoutTable .total-row td:before { content: ""; }
+}
 /* end of checkout page */
 
 /* PRODUCTS PAGE */
@@ -210,18 +216,6 @@ img {
     background: transparent;
     color: white;
 }
-@media only screen and (max-width:767px) {
-    .btn {
-        font-size: 12px;
-    }
-    .card{
-        flex-direction: column;
-        width:100%;
-        margin:10px;
-    }
-}
-        
-/* end of products */
 
 /* START OF CONTACT FORM */
 
@@ -234,14 +228,11 @@ img {
 }
 
 .contact {
-    align-items: left;
+    align-items: center;
     background-color: transparent;
-    color: white;
+    color: black;
     width: auto;
     left: auto;
-    display: grid;
-    place-items: center;
-    min-height: 89.8vh;
 }
 
 .contact .heading-text {
@@ -265,17 +256,6 @@ img {
   color: white !important;
   border: 2px solid white;
 }
-@media only screen and (max-width:767px) {
-    .contact {
-        align-items: center;
-    }
-    .heading-text{
-        font-size: 1.5rem;
-    }
-    .submit, .reset{
-        font-size: 1.2rem;
-    }
-}
 /* end of contact form */
 
 /* START OF ADMIN PAGE */
@@ -287,66 +267,77 @@ img {
     color: white;
 }
 
+.heading,
+table,
+label {
+  color: white;
+}
+
+.input {
+    color:black;
+}
 #inputs {
-    margin-bottom: 20px;
-  }
-  
-  #inputs label {
-    margin-right: 10px;
-  }
-  
-  #inputs input {
-    margin-right: 10px;
-  }
-  
-  .addButton {
-    margin-top: 10px;
-  }
-  
-  .container-fluid5 {
-    padding: 20px;
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-  }
-  
-  thead th,
-  tbody td {
-    padding: 10px;
-    text-align: left;
-  }
-  
-  thead th {
-    background-color: pink;
-  }
-  
-  tbody td {
-    border-top: 1px solid #ddd;
-  }
-  
-  .img-head {
-    width: 100%;
-  }
-  .table-img {
-    height: 130px;
-    width: 130px;
-  }
-  @media only screen and (max-width:767px) {
-    #inputs, #inputs label, #inputs input,
-    .addButton, table, thead th, tbody td {
-        flex-direction: column;
-        width:100%;
-        margin:10px;
-        height:auto;    
-    }
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  padding: 15px;
+}
+label {
+  padding-right: 5px;
+}
+input {
+  border: 1px solid black;
+  border-radius: 10px;
+  margin-right: 10px;
+  margin-left: 5px;
+}
+
+::placeholder {
+  color: white;
+}
+.addButton,
+.delBtn {
+  margin-left: 5px;
+  background: white;
+  color: black;
+  border-color: black;
+  --bg: #000;
+  transition: 0.2s;
+}
+.addButton:hover,
+.delBtn:hover {
+  transform: translate(-0.25rem, -0.25rem);
+  box-shadow: 0.25rem 0.25rem var(--bg);
+  background: black;
+  color: white;
+  border: 2px solid white;
+}
+
+table {
+  width: 80%;
+  margin-bottom: 20px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+tr,
+th,
+td {
+  border: 2px solid white;
+}
+
+.rows {
+  height: 150px;
+}
+.table-img {
+  height: 130px;
+  width: 130px;
+}
+#table {
+  margin-bottom: 20px;
 }
 /* end of admin page */
-
-@media (width <769px){
-    
-}
 
 /* START OF FOOTER*/
 footer {
@@ -355,7 +346,6 @@ footer {
     text-align: center;
     color: black !important;
     width: 100%;
-    
 }
 
 .card1 {
