--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,9 @@ img {
 /* HOME PAGE */
 .container-fluid1 {
     min-height: 89.8vh;
-    display: grid;
-    place-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
     background-image: url(https://asheekasamuels.github.io/All-Images/images/candyland.webp);
     background-size: cover;
     background-position: center;
@@ -86,7 +87,22 @@ img {
     display: grid;
     margin-left: 15px;
 }
+@media (max-width: 768px) {
+    .container-fluid1 {
+        min-height: auto;
+    }
+    .container {
+        margin-left: 0;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 10px;
+    }
+}
 
+@media (max-width: 576px) {
+    .container {
+        grid-template-columns: 1fr;
+    }
+}
 /* end of home page */
 
 /* ABOUT PAGE */
@@ -306,6 +322,7 @@ input {
   border-color: black;
   --bg: #000;
   transition: 0.2s;
+  display: block;
 }
 .addButton:hover,
 .delBtn:hover {
