--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@
     }
     
 }
+.nav-link:hover{
+    background-color: lightblue;
+    color:white;
+}
+
 /* All the images */
 img {
     aspect-ratio: 1;
@@ -88,7 +93,7 @@ img {
     margin-left: 15px;
 }
 
-@media (max-width: 768px) {
+@media (width < 999px) {
     .container-fluid1 {
         min-height: auto; /* Adjust as needed */
     }
@@ -98,13 +103,6 @@ img {
         gap: 10px;
     }
 }
-
-@media (max-width: 576px) {
-    .container {
-        grid-template-columns: 1fr;
-    }
-}
-
 
 /* end of home page */
 
@@ -142,7 +140,16 @@ img {
     padding-top: 50px;
 }
 .p2 {
-    font-family:  'Lora', serif;
+    font-family: 'emilys candy';
+}
+@media (max-width: 991.98px) {
+    .container3 {
+        max-width: 600px; /* Adjust max-width as needed */
+    }
+
+    #box1 {
+        width: 100%; /* Adjust box width for smaller screens */
+    }
 }
 
 /* end of about page */
@@ -248,29 +255,12 @@ img {
     justify-content: center;
     gap: 20px; /* Adjust as needed */
 }
-
-@media (max-width: 768px) {
-    .container-fluidP {
-        min-height: auto; /* Adjust as needed */
-    }
-    .container-fluidP {
-        padding: 20px;
-    }
-}
-
-@media (max-width: 576px) {
-    .container-fluidP {
-        min-height: auto; /* Adjust as needed */
-    }
-    .container-fluidP {
-        padding: 10px;
-    }
-    .btn {
-        font-size: 14px;
-        padding: 8px 16px;
-    }
+@media (max-width: 991.98px) {
     .card {
-        padding: 8px;
+        width: 100%; /* Adjust card width for smaller screens */
+    }
+    .card-container {
+        gap: 10px; /* Adjust gap for smaller screens */
     }
 }
 
@@ -315,13 +305,13 @@ img {
     border: 2px solid white;
 }
 
-@media (max-width: 768px) {
+@media (width < 999px) {
     .contact {
         text-align: center;
     }
 }
 
-@media (max-width: 576px) {
+@media (width < 999px) {
     .submit,
     .reset {
         font-size: 14px;
